--- a/dev/example/index.html
+++ b/dev/example/index.html
@@ -58,103 +58,7 @@ for k = 1:length(kr)
     CL[k] = sum(Cp)/(nspan*nchord)
 end
 
-println(CL)</code></pre><pre><code class="language-none">Complex{Float64}[5.469951193063653 + 0.0im, 4.290939951467311 + 0.3166473189485307im, 3.811308954684494 + 1.623745292882406im, 3.4297214864062022 + 4.106557503770894im, 3.173824870397947 + 6.327687027471004im, 2.9114292317363 + 8.29013753929997im, 2.6262943633142957 + 9.975798091612491im, 2.323877065478717 + 11.36817650214414im, 2.014750520973105 + 12.461220208818865im, 1.7097578786561909 + 13.260874668344076im, 1.4181499074018102 + 13.78370390825787im, 1.1468807841505873 + 14.05432585659564im]</code></pre><h2 id="Examine-the-Results-1"><a class="docs-heading-anchor" href="#Examine-the-Results-1">Examine the Results</a><a class="docs-heading-anchor-permalink" href="#Examine-the-Results-1" title="Permalink"></a></h2><p>This exact analysis was performed by van Zyl in &quot;Robustness of the subsonic doublet lattice method&quot;.  Here&#39;s a comparison of our results to van Zyl&#39;s results:</p><pre><code class="language-julia">using Plots
-pyplot()
-
-# 10 x 40 - extracted from plot
-CL_van_Zyl = [5.5+0.0im, 4.3+0.2im, 3.8+1.5im, 3.4+4.0im, 3.2+6.2im, 2.9+8.2im,
-    2.6+9.9im, 2.3+11.3im, 2.0+12.4im, 1.7+13.2im, 1.4+13.8im, 1.1+14.0im]
-
-p1 = plot(grid=false, overwrite_figure=false,
-    xlabel=&quot;k&quot;, xlim=(0,10), xticks=0:2:10,
-    ylabel=&quot;\$Re(C_{L\\alpha})\$&quot;, ylim=(-1,7), yticks=-1:7)
-scatter!(kr, real(CL_van_Zyl), label=&quot;van Zyl&quot;)
-scatter!(kr, real(CL), label=&quot;DLM.jl&quot;)
-
-p2 = plot(grid=false, overwrite_figure=false,
-    xlabel=&quot;k&quot;, xlim=(0,10), xticks=0:2:10,
-    ylabel=&quot;\$Im(C_{L\\alpha})\$&quot;, ylim=(-5,30), yticks=-5:5:30)
-scatter!(kr, imag(CL_van_Zyl), label=&quot;van Zyl&quot;)
-scatter!(kr, imag(CL), label=&quot;DLM.jl&quot;)
-
-plot(p1, p2, layout=(1,2), show=true)
-savefig(&quot;comparison.svg&quot;)
-
-nothing</code></pre><pre><code class="language-none">[ Info: Installing matplotlib via the Conda matplotlib package...
-[ Info: Running `conda install -q -y matplotlib` in root environment
-Collecting package metadata (current_repodata.json): ...working... done
-Solving environment: ...working... done
-
-## Package Plan ##
-
-  environment location: /home/runner/.julia/conda/3
-
-  added / updated specs:
-    - matplotlib
-
-
-The following packages will be downloaded:
-
-    package                    |            build
-    ---------------------------|-----------------
-    cycler-0.10.0              |           py37_0          13 KB
-    dbus-1.13.14               |       hb2f20db_0         504 KB
-    expat-2.2.6                |       he6710b0_0         146 KB
-    fontconfig-2.13.0          |       h9420a91_0         227 KB
-    freetype-2.9.1             |       h8a8886c_1         550 KB
-    glib-2.63.1                |       h5a9c865_0         2.9 MB
-    gst-plugins-base-1.14.0    |       hbbd80ab_1         4.8 MB
-    gstreamer-1.14.0           |       hb453b48_1         3.1 MB
-    icu-58.2                   |       he6710b0_3        10.5 MB
-    jpeg-9b                    |       h024ee3a_2         214 KB
-    kiwisolver-1.2.0           |   py37hfd86e86_0          84 KB
-    libpng-1.6.37              |       hbc83047_0         278 KB
-    libuuid-1.0.3              |       h1bed415_2          15 KB
-    libxcb-1.13                |       h1bed415_1         421 KB
-    libxml2-2.9.10             |       he19cac6_1         1.2 MB
-    matplotlib-3.1.3           |           py37_0          21 KB
-    matplotlib-base-3.1.3      |   py37hef1b27d_0         5.0 MB
-    pcre-8.43                  |       he6710b0_0         209 KB
-    pyparsing-2.4.7            |             py_0          65 KB
-    pyqt-5.9.2                 |   py37h05f1152_2         4.5 MB
-    python-dateutil-2.8.1      |             py_0         215 KB
-    qt-5.9.7                   |       h5867ecd_1        68.5 MB
-    sip-4.19.8                 |   py37hf484d3e_0         274 KB
-    tornado-6.0.4              |   py37h7b6447c_1         611 KB
-    ------------------------------------------------------------
-                                           Total:       104.2 MB
-
-The following NEW packages will be INSTALLED:
-
-  cycler             pkgs/main/linux-64::cycler-0.10.0-py37_0
-  dbus               pkgs/main/linux-64::dbus-1.13.14-hb2f20db_0
-  expat              pkgs/main/linux-64::expat-2.2.6-he6710b0_0
-  fontconfig         pkgs/main/linux-64::fontconfig-2.13.0-h9420a91_0
-  freetype           pkgs/main/linux-64::freetype-2.9.1-h8a8886c_1
-  glib               pkgs/main/linux-64::glib-2.63.1-h5a9c865_0
-  gst-plugins-base   pkgs/main/linux-64::gst-plugins-base-1.14.0-hbbd80ab_1
-  gstreamer          pkgs/main/linux-64::gstreamer-1.14.0-hb453b48_1
-  icu                pkgs/main/linux-64::icu-58.2-he6710b0_3
-  jpeg               pkgs/main/linux-64::jpeg-9b-h024ee3a_2
-  kiwisolver         pkgs/main/linux-64::kiwisolver-1.2.0-py37hfd86e86_0
-  libpng             pkgs/main/linux-64::libpng-1.6.37-hbc83047_0
-  libuuid            pkgs/main/linux-64::libuuid-1.0.3-h1bed415_2
-  libxcb             pkgs/main/linux-64::libxcb-1.13-h1bed415_1
-  libxml2            pkgs/main/linux-64::libxml2-2.9.10-he19cac6_1
-  matplotlib         pkgs/main/linux-64::matplotlib-3.1.3-py37_0
-  matplotlib-base    pkgs/main/linux-64::matplotlib-base-3.1.3-py37hef1b27d_0
-  pcre               pkgs/main/linux-64::pcre-8.43-he6710b0_0
-  pyparsing          pkgs/main/noarch::pyparsing-2.4.7-py_0
-  pyqt               pkgs/main/linux-64::pyqt-5.9.2-py37h05f1152_2
-  python-dateutil    pkgs/main/noarch::python-dateutil-2.8.1-py_0
-  qt                 pkgs/main/linux-64::qt-5.9.7-h5867ecd_1
-  sip                pkgs/main/linux-64::sip-4.19.8-py37hf484d3e_0
-  tornado            pkgs/main/linux-64::tornado-6.0.4-py37h7b6447c_1
-
-
-Preparing transaction: ...working... done
-Verifying transaction: ...working... done
-Executing transaction: ...working... done</code></pre><p><img src="../comparison.svg" alt/></p><p>As you can see, the results match exactly.  This is actually not surprising, since the doublet lattice method implementation in DLM.jl is based on the same theory as the doublet lattice method used by van Zyl.</p><h2 id="Evaluating-the-Accuracy-of-the-Results-1"><a class="docs-heading-anchor" href="#Evaluating-the-Accuracy-of-the-Results-1">Evaluating the Accuracy of the Results</a><a class="docs-heading-anchor-permalink" href="#Evaluating-the-Accuracy-of-the-Results-1" title="Permalink"></a></h2><p>Even though our results matched those of van Zyl, that doesn&#39;t mean that they are accurate.  Here we show an excerpt from van Zyl&#39;s paper which shows just how accurate our analysis is:</p><p><img src="../vanZyl.png" alt/></p><p>The extrapolated solution shown in the figure is effectively the grid-converged solution, which is pretty close to the analytical solution for an infinite aspect-ratio wing.  The doublet lattice results for the 10x10 and 10x40 grids, however, fail to be accurate past a reduced frequency of 2 due to the coarseness of the grid in the chordwise direction.</p><p>While doing a grid-independent study is the only sure way of knowing whether your discretization has converged to the correct pressure distribution, previous studies have suggested specified numbers of panels per wavelength in order to resolve the pressure distribution.</p><p>Rodden, Taylor, and McIntosh suggested that 50 panels per wavelength may be sufficient to resolve the pressure distribution, with an absolute minimum number of panels of 4.</p><pre><code class="language-julia"># use standard definition of reduced frequency based on semi-chord
+println(CL)</code></pre><pre><code class="language-none">Complex{Float64}[5.469951193063653 + 0.0im, 4.290939951467311 + 0.3166473189485307im, 3.811308954684494 + 1.623745292882406im, 3.4297214864062022 + 4.106557503770894im, 3.173824870397947 + 6.327687027471004im, 2.9114292317363 + 8.29013753929997im, 2.6262943633142957 + 9.975798091612491im, 2.323877065478717 + 11.36817650214414im, 2.014750520973105 + 12.461220208818865im, 1.7097578786561909 + 13.260874668344076im, 1.4181499074018102 + 13.78370390825787im, 1.1468807841505873 + 14.05432585659564im]</code></pre><h2 id="Examine-the-Results-1"><a class="docs-heading-anchor" href="#Examine-the-Results-1">Examine the Results</a><a class="docs-heading-anchor-permalink" href="#Examine-the-Results-1" title="Permalink"></a></h2><p>This exact analysis was performed by van Zyl in &quot;Robustness of the subsonic doublet lattice method&quot;.  Here&#39;s a comparison of our results to van Zyl&#39;s results:</p><p><img src="../comparison.svg" alt/></p><p>As you can see, the results match exactly.  This is actually not surprising, since the doublet lattice method implementation in DLM.jl is based on the same theory as the doublet lattice method used by van Zyl.</p><h2 id="Evaluating-the-Accuracy-of-the-Results-1"><a class="docs-heading-anchor" href="#Evaluating-the-Accuracy-of-the-Results-1">Evaluating the Accuracy of the Results</a><a class="docs-heading-anchor-permalink" href="#Evaluating-the-Accuracy-of-the-Results-1" title="Permalink"></a></h2><p>Even though our results matched those of van Zyl, that doesn&#39;t mean that they are accurate.  Here we show an excerpt from van Zyl&#39;s paper which shows just how accurate our analysis is:</p><p><img src="../vanZyl.png" alt/></p><p>The extrapolated solution shown in the figure is effectively the grid-converged solution, which is pretty close to the analytical solution for an infinite aspect-ratio wing.  The doublet lattice results for the 10x10 and 10x40 grids, however, fail to be accurate past a reduced frequency of 2 due to the coarseness of the grid in the chordwise direction.</p><p>While doing a grid-independent study is the only sure way of knowing whether your discretization has converged to the correct pressure distribution, previous studies have suggested specified numbers of panels per wavelength in order to resolve the pressure distribution.</p><p>Rodden, Taylor, and McIntosh suggested that 50 panels per wavelength may be sufficient to resolve the pressure distribution, with an absolute minimum number of panels of 4.</p><pre><code class="language-julia"># use standard definition of reduced frequency based on semi-chord
 kr = [0, 1, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
 
 # minimum number of chordwise panels to resolve pressure distribution
@@ -169,4 +73,4 @@ println(&quot;Minimum number of spanwise panels for parabolic kernel: &quot;, ns
 nspan_quartic = ceil.(Int, nchord*(AR/2)*1/10)
 println(&quot;Minimum number of spanwise panels for quartic kernel: &quot;, nspan_quartic)</code></pre><pre><code class="language-none">Number of chordwise panels: [4, 16, 32, 64, 96, 128, 160, 191, 223, 255, 287, 319]
 Minimum number of spanwise panels for parabolic kernel: [14, 54, 107, 214, 320, 427, 534, 637, 744, 850, 957, 1064]
-Minimum number of spanwise panels for quartic kernel: [4, 16, 32, 64, 96, 128, 160, 191, 223, 255, 287, 319]</code></pre><p>Others, however, have suggested as few as 12 panels per wavelength is sufficient.  Ultimately the appropriate number of panels depends on how accurate the solution need to be.</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../library/">Library »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Friday 12 June 2020 23:18">Friday 12 June 2020</span>. Using Julia version 1.3.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+Minimum number of spanwise panels for quartic kernel: [4, 16, 32, 64, 96, 128, 160, 191, 223, 255, 287, 319]</code></pre><p>Others, however, have suggested as few as 12 panels per wavelength is sufficient.  Ultimately the appropriate number of panels depends on how accurate the solution need to be.</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../library/">Library »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Friday 12 June 2020 23:31">Friday 12 June 2020</span>. Using Julia version 1.3.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
